* Craters now spawn in the Upside-Down.
* Added the Shadow Alien boss mob.
    * Spawns near Shadow Shrines in the Upside-Down.
    * Has a 10/800 chance to heal itself for 10 - 20 points every tick.
    * Once health is at or lower than 500, has a 5/5000 chance to spawn a scorpion every tick.
    * Hits the Player extremely hard.
        * Can one-shot you if you're not careful and prepared.

-- FIXES --
* Fixed block of Super Charged Coal not giving right amount of Conductive Chargium liquid.
-----------

[3.0.3 - "Oops" Fix]

-- FIXES --
* Fixed treasure spawning "fake" items in chest gen.
-----------

[3.0.2 - Bug Fixes & Adjustments]
* Triumph Swords (Diablo, Ender, Glacies, Thor and Mortem) now take durability hits when hitting entities or using their powers.
* Changed the information displayed on Thor.
* Registered Shinium with the OreDictionary as Shinium instead of just Platinum.

-- FIXES --
* Fixed recipe for Precious Shinium not working.
* Fixed Ender Tower chest contents spawning in Overworld chests.
* Fixed unintentional crafting recipe that gave vegetables from seeds for tomatoes and cucumbers.
* Fixed mod version inconsistencies (was listed as 2.6.7, is now listed as 3.0.2).
-----------

[3.0 - The Ender Update]
* Added Ender Cane.
    * Generates naturally in The End.
    * Only grows on End Stone and Ender Dirt.
    * Item can be used as a pink dye.
    * Item can be crafted into four Power Sticks.
* Added the Melted Chocolate fluid and Melted Chocolate Bucket.
    * Generates naturally as lakes in Candy Land biomes.
    * Obtained by putting Chocolate Blocks in a Magma Crucible, or by picking it up in a bucket.
    * Briefly applies a speed boost to the Player when swam in.
* Added Ender Dirt block.
    * Generates naturally in lakes in The End.
* Added Magma Rock block.
    * Generates naturally in the Nether, in lake form and Glowstone form.
    * Touching it causes fire damage, and also sets the Player on fire, which causes separate damage.