@@ -3,7 +3,7 @@
   "modid": "zollernextras",
   "name": "Zollern Extras",
   "description": "An extras mod that changes the world and adds new things to it.",
-  "version": "3.0.3-1.7.10",
+  "version": "3.1-1.7.10",
   "mcversion": "1.7.10",
   "url": "",
   "updateUrl": "",
